v1 display grid css e textps Co-authored-by: PedroZilves <PedroZilves@users.noreply.github.com>

--- a/src/components/css/cabecalho/cabecalho.scss
+++ b/src/components/css/cabecalho/cabecalho.scss
@@ -39,7 +39,7 @@ header {
       #logoutBtn{
         width: 7vw; /* Ocupa 100% da largura do container */
         height: 3vh;
-        background-color: #3d50cc;
+        background-color: #6b4950;
         color: #ffffff;
         border: none;
         border-radius: 8px;
