--- a/src/components/css/cabecalho/cabecalho.css
+++ b/src/components/css/cabecalho/cabecalho.css
@@ -33,7 +33,7 @@ header ul #bv {
 header ul #logoutBtn {
   width: 7vw; /* Ocupa 100% da largura do container */
   height: 3vh;
-  background-color: #3d50cc;
+  background-color: #6b4950;
   color: #ffffff;
   border: none;
   border-radius: 8px;
